Added footer to website

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
                 </div>
               </nav>
         </header>
+        
+        <section>
+            <footer class="text-center bg-dark text-light">
+                <div class="container">
+                  <span class="copyright">Copyright &copy; 2024 | CosLife M | All rights reserved</span>
+                  <i class="fas fa-arrow-up footer-arrow-up" onclick="scrollToTop()"></i>
+                </div>
+              </footer>
+        </section>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
