Added main html images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section>
         <header>
-            <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Coslife M</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,20 +24,62 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Handman</a>
+                        <a class="nav-link" href="handyman.htnl">Handman</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Plumber</a>
+                        <a class="nav-link" href="plumber.html">Plumber</a>
                       </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Electrician</a>
+                        <a class="nav-link" href="electrician.html">Electrician</a>
                       </li>
                     </ul>
-                  </div>
+                  </div>git g
                 </div>
               </nav>
         </header>
-        
+        <main>
+            <div class="card text-warning bg-dark mt-5">
+                <img src="images/programers-team.jpg" class="card-img" alt="CosLife Image">
+                <div class="card-img-overlay">
+                  <h1 class="card-title">Build Website </h1>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+              <div class="card-group">
+                <div class="card">
+                  <img src="images/pc-01.jpg" class="card-img-top" alt="Creating Website Image">
+                  <div class="card-body">
+                    <h5 class="card-title">New Website</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="images/pc-02.jpg" class="card-img-top" alt="Hosting Website Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Website Maintence</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="images/pc-03.jpg" class="card-img-top" alt="Testing Website Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Website Maintence</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+              </div>
+        </main>
+
         <section>
             <footer class="text-center bg-dark text-light">
                 <div class="container">
