--- a/index.html
+++ b/index.html
@@ -162,6 +162,30 @@
     </div>
   </div>
   <div class="container">
+      <div class="row py-5">
+        <div class="col-md-6">
+          <h2><strong>Web Maintenance</strong></h2>
+          <div class="card-footer text-center my-5">
+            <i class="bi bi-brush h1"></i>
+            <a href="mailto:info@cosmosmhlanga.site"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          </div>
+          <ul>
+            <li>Custom Website Design</li>
+            <li>Responsive Design</li>
+            <li>User Experience (UX) Design</li>
+            <li>Graphic Design</li>
+            <li>UI (User Interface) Design</li>
+            <li>Prototype Development</li>
+            <li>Accessibility Compliance</li>
+            <li>Typography and Color Scheme</li>
+            <li>Animation and Multimedia Integration</li>
+            <li>Optimization for Performance</li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <img src="images/website-img/maintenance.jpg" class="img-fluid" alt="Image">
+        </div>
+      </div>
   </section>
   <!--===================================== End Service ====================================== -->
 
