Added hosting info and iage

--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
 
 
 
- <!--=============================== service we offer ======================================= -->
+ <!-- service we offer -->
  <section id="services" class="py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img src="images/website-img/Programming.png" class="img-fluid" alt="Image">
+        <img src="images/website-img/Programming.png"  class="img-fluid" alt="Image">
       </div>
       <div class="col-md-6">
         <h2><strong>Web Development</strong></h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-gear h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
         </div>
         <p><b>Web development services typically include</b>:</p>
         <ul>
@@ -108,13 +108,14 @@
     </div>
     <hr>
   </div>
+
   <div class="container">
     <div class="row py-5">
       <div class="col-md-6">
         <h2><strong>Web Design</strong></h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-brush h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
         </div>
         <ul>
           <li>Custom Website Design</li>
@@ -135,6 +136,43 @@
     </div>
     <hr>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="images/website-img/web-hosting.svg"  class="img-fluid" alt="Image">
+        <h2>What is Hosting?</h2>
+          <p>Hosting is a service that allows organizations and individuals to post a website or web page onto the Internet. Here are some key points about hosting:</p>
+         <h2><strong>Types of Hosting:</strong></h2>
+          <ul>
+            <li><strong>Shared Hosting:</strong> Multiple websites share the same server resources.</li>
+            <li><strong>VPS Hosting:</strong> Virtual Private Server hosting provides dedicated resources on a shared server.</li>
+           <li><strong>Dedicated Hosting:</strong> A whole server dedicated to a single website or client.</li>
+           <li><strong>Cloud Hosting:</strong> Uses a network of servers to ensure high availability and scalability.</li>
+          </ul>
+          
+      </div>
+      <div class="col-md-6">
+        <h2><strong>Web Hosting</strong></h2>
+        <div class="card-footer text-center my-5">
+          <i class="bi bi-gear h1"></i>
+          <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+      </div>
+      <h4><b>Web Hosting services include</b>:</h4> <br>
+        <ul>
+          <li><strong>Web Server:</strong> Hosting services provide the necessary infrastructure and technologies to host your website on a server.</li>
+          <li><strong>Domain Name:</strong> A unique address (like www.example.com) where your website can be accessed.</li>
+          <li><strong>Storage Space:</strong> Hosting providers offer space on their servers to store your website files, images, and databases.</li>
+          <li><strong>Bandwidth:</strong> The amount of data that can be transferred between your website and its visitors.</li>
+          <li><strong>Email Accounts:</strong> Many hosting plans include email services linked to your domain name (e.g., info@example.com).</li>
+          <li><strong>Support:</strong> Hosting providers typically offer technical support to help with website maintenance and troubleshooting.</li>
+          <li><strong>Security:</strong> Hosting services often include security features like SSL certificates, firewalls, and backups to protect your site.</li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+  </div>
+
   <div class="container">
     <div class="row py-5">
       <div class="col-md-6">
@@ -144,7 +182,7 @@
         <h2>Digital Marketing</h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-bar-chart h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="mailto:info@cosmosmhlanga.site" target="_blank"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
         </div>
          <ul>
           <li>Search Engine Optimization (SEO)</li>
@@ -167,7 +205,7 @@
           <h2><strong>Web Maintenance</strong></h2>
           <div class="card-footer text-center my-5">
             <i class="bi bi-brush h1"></i>
-            <a href="mailto:info@cosmosmhlanga.site"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+            <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
           </div>
           <ul>
             <li>Custom Website Design</li>
@@ -183,9 +221,13 @@
           </ul>
         </div>
         <div class="col-md-6">
-          <img src="images/website-img/maintenance.jpg" class="img-fluid" alt="Image">
+          <img src="images/website-img/Programmer.jpg" class="img-fluid" alt="Image">
         </div>
       </div>
+      <!-- Another Image -->
+      <div> 
+          <img src="images/website-img/web-desgin.jpg" class="img-fluid" alt="Programming image">
+        </div>
   </section>
   <!--===================================== End Service ====================================== -->
 
