Added a quotation page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
      <link rel="stylesheet" href="main.css">
      <link rel="stylesheet" href="styles.css">
     <!-- Google API -->
-
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>  
+
 </head>
 <body>
  <!--NAVBAR SECTION -->
@@ -90,7 +90,7 @@
         <h2><strong>Web Development</strong></h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-gear h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="website-quote.html" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Get Quote</a>
         </div>
         <p><b>Web development services typically include</b>:</p>
         <ul>
@@ -115,7 +115,7 @@
         <h2><strong>Web Design</strong></h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-brush h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="website-quote.html" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Get Quote</a>
         </div>
         <ul>
           <li>Custom Website Design</li>
@@ -156,7 +156,7 @@
         <h2><strong>Web Hosting</strong></h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-gear h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="website-quote.html" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Get Quote</a>
       </div>
       <h4><b>Web Hosting services include</b>:</h4> <br>
         <ul>
@@ -182,7 +182,7 @@
         <h2>Digital Marketing</h2>
         <div class="card-footer text-center my-5">
           <i class="bi bi-bar-chart h1"></i>
-          <a href="mailto:info@cosmosmhlanga.site" target="_blank"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+          <a href="website-quote.html" target="_blank"  class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Get Quote</a>
         </div>
          <ul>
           <li>Search Engine Optimization (SEO)</li>
@@ -205,7 +205,7 @@
           <h2><strong>Web Maintenance</strong></h2>
           <div class="card-footer text-center my-5">
             <i class="bi bi-brush h1"></i>
-            <a href="mailto:info@cosmosmhlanga.site" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Contact Me</a>
+            <a href="website-quote.html" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Get Quote</a>
           </div>
           <ul>
             <li>Custom Website Design</li>
