form submition and  card added

--- a/index.html
+++ b/index.html
@@ -208,17 +208,13 @@
             <a href="website-quote.html" target="_blank" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="Contact">Get Quote</a>
           </div>
           <ul>
-            <li>Custom Website Design</li>
-            <li>Responsive Design</li>
-            <li>User Experience (UX) Design</li>
-            <li>Graphic Design</li>
-            <li>UI (User Interface) Design</li>
-            <li>Prototype Development</li>
-            <li>Accessibility Compliance</li>
-            <li>Typography and Color Scheme</li>
-            <li>Animation and Multimedia Integration</li>
-            <li>Optimization for Performance</li>
-          </ul>
+            <li>Regular updates and security patches</li>
+            <li>Content updates and management</li>
+            <li>Performance optimization</li>
+            <li>Backup and recovery solutions</li>
+            <li>Technical support and troubleshooting</li>
+            <li>Monitoring and analytics</li>
+        </ul>
         </div>
         <div class="col-md-6">
           <img src="images/website-img/Programmer.jpg" class="img-fluid" alt="Image">
