--- a/website-quote.html
+++ b/website-quote.html
@@ -53,9 +53,9 @@
 
 <div class="container">
     <!-- Quoation Form -->
-<form class="px-5 card" id="quotationForm">
-    <div class="bg-light pt-5">
-        <h1 class="pt-5 text-center">Quotation</h1>
+<form class="card" id="quotationForm">
+    <div class="bg-light">
+        <h1 class="text-center">Quotation</h1>
         <p><strong>What type of website do you need?</strong></p>
        </div>
   <div class="form-group pt-5">
@@ -128,7 +128,7 @@
 </div>
 <!-- End Quoatation form -->
 <div class="container bg-light">
-    <h2 class="mt-5 pt-3">Quotation Form</h2>
+    <h2 class="mt-3">Quotation Form</h2>
     <form class="card">
         <div class="form-group">
             <label for="name"><strong></strong></label>
