--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Me</a>
+                <a class="nav-link" href="contact.html">About Me</a>
               </li>
              
                 <a class="px-3" href="https://github.com/codewithcosmos" target="_blank"><i class="fab fa-github h3"></i></a>
