--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <!-- Font Awesome CSS for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-     <!-- CSS STYLES -->
-     <link rel="stylesheet" href="main.css">
-     <link rel="stylesheet" href="styles.css">
-    <!-- Google API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>  
 
+     <!-- CSS STYLES -->
+     <link rel="stylesheet" href="styles/nav.css">
+     <link rel="stylesheet" href="styles/styles.css">
+     <link rel="stylesheet" href="styles/main.css">
+     <link rel="stylesheet" href="styles/invoice.css">  
 </head>
 <body>
  <!--NAVBAR SECTION -->
@@ -34,13 +36,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/products.html">Products</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/invoice.html">Invoice</a>
                   </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Me</a>
+                <a class="nav-link" href="/about.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Me</a>
+                <a class="nav-link" href="/contact.html">Contact Me</a>
               </li>
              
                 <a class="px-3" href="https://github.com/codewithcosmos" target="_blank"><i class="fab fa-github h3"></i></a>
