--- a/invoice.html
+++ b/invoice.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Invoice</title>
-    <link rel="stylesheet" href="/path/to/your/invoice.css">
+    <title>Invoice</title>
+    <link rel="stylesheet" href="styles/invoice.css">
 </head>
 <body>
-    <!-- Your website's existing header and navigation -->
-
     <div class="invoice-box" id="invoice">
         <table cellpadding="0" cellspacing="0">
             <tr class="top">
@@ -16,7 +14,7 @@
                     <table>
                         <tr>
                             <td class="title">
-                                <img src="logo.png" alt="Company Logo" style="width:100%; max-width:300px;">
+                                <img src="images/website-img/coslife-coza.png" alt="Company Logo" style="width:100%; max-width:90px;">
                             </td>
                             <td>
                                 Invoice #: <span id="invoiceNumber"></span><br>
@@ -46,39 +44,26 @@
                 </td>
             </tr>
             <tr class="heading">
-                <td>
-                    Item Description
-                </td>
-                <td>
-                    Amount
-                </td>
+                <td>Item Description</td>
+                <td>Amount</td>
             </tr>
             <tbody id="items">
                 <!-- Items will be inserted here by JavaScript -->
             </tbody>
             <tr class="total">
                 <td></td>
-                <td id="subtotal">
-                    Subtotal: $0.00
-                </td>
+                <td id="subtotal">Subtotal: $0.00</td>
             </tr>
             <tr class="total">
                 <td></td>
-                <td id="taxRate">
-                    Tax rate: $0.00
-                </td>
+                <td id="taxRate">Tax rate: $0.00</td>
             </tr>
             <tr class="total">
                 <td></td>
-                <td id="additionalCosts">
-                    Additional costs: $0.00
-                </td>
+                <td id="additionalCosts">Additional costs: $0.00</td>
             </tr>
         </table>
     </div>
-
-    <!-- Your website's existing footer -->
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             fetch('https://your-deployed-nodejs-server.com/invoices/latest')
@@ -86,7 +71,6 @@
                 .then(data => {
                     document.getElementById('invoiceNumber').innerText = data.invoiceNumber;
                     document.getElementById('date').innerText = new Date(data.date).toLocaleDateString();
-
                     document.getElementById('billToName').innerText = data.billTo.name;
                     document.getElementById('billToAddress').innerText = `${data.billTo.address}, ${data.billTo.city}, ${data.billTo.state}, ${data.billTo.zip}`;
                     document.getElementById('billToPhone').innerText = data.billTo.phone;
@@ -96,16 +80,12 @@
                     data.items.forEach(item => {
                         const itemRow = document.createElement('tr');
                         itemRow.classList.add('item');
-                        itemRow.innerHTML = `
-                            <td>${item.description}</td>
-                            <td>$${item.amount.toFixed(2)}</td>
-                        `;
+                        itemRow.innerHTML = `<td>${item.description}</td><td>$${item.amount.toFixed(2)}</td>`;
                         itemsContainer.appendChild(itemRow);
                         subtotal += item.amount;
                     });
 
                     document.getElementById('subtotal').innerText = `Subtotal: $${subtotal.toFixed(2)}`;
-                    // Add tax rate and additional costs if needed
                 })
                 .catch(error => console.error('Error fetching the invoice:', error));
         });
