invoice page to be automated and menu adjusted,

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <a class="nav-link" href="/products.html">Products</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="/catalogue.html">Catalogue</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="/invoice.html"></a>
                   </li>
               <li class="nav-item">
