--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/products.html">Products</a>
+                    <a class="nav-link" href="/catalogue.html">Catalogue</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/invoice.html"></a>
